--- a/calculator.css
+++ b/calculator.css
@@ -5,7 +5,7 @@
     margin-top: 20px;
     margin-left: 25%;
     border-radius: 50%;
-    background: #FFA500;
+    background: #FF00FF;
     box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2);
 }
 h1{
